--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,37 +1,164 @@
 
-        \begin{longtable}{llrlrr}
+    \begin{table*}[h]
+        \centering
+        \begin{tabular}{llrlrr}
 \hline
  model   & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
  \hline
-\multirow{7}{*}{Tanh2HiddenLayer}         & 89.1 ± 2.4  &  0.1  & [8, 4]         &         12 &      100 \\
-         & 88.4 ± 4.2  &  0.1  & [8, 4]         &         12 &      200 \\
-         & 87.1 ± 3.6  &  0.11 & [8, 4]         &         12 &       50 \\
-         & 69.2 ± 19.3 &  0.27 & [8, 4]         &         12 &       20 \\
-         & 65.9 ± 39.4 &  0.3  & [15, 5]        &         20 &      100 \\
-         & 63.6 ± 40.1 &  0.32 & [15, 5]        &         20 &      200 \\
-         & 58.2 ± 45.4 &  0.37 & [15, 5]        &         20 &       50 \\
+TanhFFNN         & 89.7 ± 6.6  &  0.09 & [8, 4]         &         12 &       50 \\
  \hline
-Linear2HiddenLayer         & 57.6 ± 11.9 &  0.37 & [15, 5]        &         20 &       20 \\
+\multirow{2}{*}{Relu2HiddenLayer}         & 87.0 ± 8.3  &  0.11 & [8, 4]         &         12 &       20 \\
+         & 86.9 ± 8.4  &  0.11 & [8, 4]         &         12 &       50 \\
  \hline
-Tanh2HiddenLayer         & 57.2 ± 25.4 &  0.37 & [15, 5]        &         20 &       20 \\
+Relu1HiddenLayer         & 84.8 ± 7.3  &  0.13 & [10]           &         10 &       20 \\
  \hline
-Tanh1HiddenLayer         & 57.0 ± 8.3  &  0.38 & [10]           &         10 &       20 \\
+ReluFFNN         & 83.1 ± 6.7  &  0.15 & [10]           &         10 &      100 \\
  \hline
-\multirow{7}{*}{Linear2HiddenLayer}         & 54.0 ± 1.1  &  0.4  & [15, 5]        &         20 &      200 \\
-         & 53.9 ± 1.1  &  0.4  & [15, 5]        &         20 &      100 \\
-         & 53.4 ± 2.1  &  0.41 & [15, 5]        &         20 &       50 \\
-         & 52.7 ± 4.4  &  0.41 & [8, 4]         &         12 &       50 \\
-         & 51.7 ± 4.6  &  0.42 & [8, 4]         &         12 &      100 \\
-         & 51.7 ± 4.7  &  0.42 & [8, 4]         &         12 &      200 \\
-         & 49.8 ± 11.3 &  0.44 & [8, 4]         &         12 &       20 \\
+Relu2HiddenLayer         & 82.9 ± 8.7  &  0.15 & [8, 4]         &         12 &      200 \\
  \hline
-\multirow{3}{*}{Tanh1HiddenLayer}         & 35.6 ± 35.6 &  0.56 & [10]           &         10 &      100 \\
-         & 34.2 ± 40.9 &  0.58 & [10]           &         10 &       50 \\
-         & 33.8 ± 37.8 &  0.58 & [10]           &         10 &      200 \\
+ReluFFNN         & 82.9 ± 5.7  &  0.15 & [10]           &         10 &      200 \\
+ \hline
+Relu2HiddenLayer         & 82.5 ± 10.2 &  0.15 & [8, 4]         &         12 &      100 \\
+ \hline
+ReluFFNN         & 81.3 ± 7.7  &  0.16 & [10]           &         10 &       50 \\
+ \hline
+TanhFFNN         & 80.5 ± 18.3 &  0.17 & [8, 4]         &         12 &      100 \\
+ \hline
+\multirow{3}{*}{ReluFFNN}         & 79.6 ± 14.5 &  0.18 & [8, 4]         &         12 &      200 \\
+         & 79.6 ± 9.2  &  0.18 & [10]           &         10 &       20 \\
+         & 79.3 ± 14.6 &  0.18 & [8, 4]         &         12 &      100 \\
+ \hline
+Relu2HiddenLayer         & 78.1 ± 20.0 &  0.19 & [15, 5]        &         20 &       20 \\
+ \hline
+ReluFFNN         & 77.9 ± 14.2 &  0.19 & [8, 4]         &         12 &       50 \\
+ \hline
+TanhFFNN         & 77.8 ± 17.3 &  0.19 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+GRNN         & 76.9 ± 12.0 &  0.2  & [10]           &         10 &       20 \\
+ \hline
+\multirow{2}{*}{Relu2HiddenLayer}         & 76.7 ± 16.3 &  0.2  & [15, 5]        &         20 &       50 \\
+         & 74.6 ± 20.2 &  0.22 & [15, 5]        &         20 &      100 \\
+ \hline
+TanhFFNN         & 74.3 ± 23.1 &  0.22 & [15, 10, 3]    &         28 &       20 \\
+ \hline
+\multirow{2}{*}{Tanh2HiddenLayer}         & 74.3 ± 33.2 &  0.22 & [8, 4]         &         12 &      100 \\
+         & 74.1 ± 31.2 &  0.23 & [8, 4]         &         12 &       50 \\
+ \hline
+Relu2HiddenLayer         & 73.3 ± 21.2 &  0.23 & [15, 5]        &         20 &      200 \\
+ \hline
+ReluFFNN         & 72.8 ± 18.1 &  0.24 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+\multirow{2}{*}{Tanh2HiddenLayer}         & 72.1 ± 31.9 &  0.24 & [8, 4]         &         12 &      200 \\
+         & 72.0 ± 31.9 &  0.24 & [15, 5]        &         20 &      100 \\
+ \hline
+ReluFFNN         & 71.3 ± 15.1 &  0.25 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+TanhFFNN         & 70.9 ± 27.0 &  0.25 & [8, 4]         &         12 &      200 \\
+ \hline
+ReluFFNN         & 70.8 ± 14.7 &  0.26 & [15, 10, 3]    &         28 &      200 \\
+ \hline
+GRNN         & 70.7 ± 16.4 &  0.26 & [10]           &         10 &       50 \\
+ \hline
+\multirow{2}{*}{TanhFFNN}         & 70.1 ± 24.1 &  0.26 & [15, 5]        &         20 &       20 \\
+         & 68.7 ± 27.3 &  0.27 & [10]           &         10 &       20 \\
+ \hline
+\multirow{3}{*}{Tanh2HiddenLayer}         & 67.8 ± 32.1 &  0.28 & [15, 5]        &         20 &      200 \\
+         & 67.6 ± 22.8 &  0.28 & [8, 4]         &         12 &       20 \\
+         & 67.5 ± 24.1 &  0.28 & [15, 5]        &         20 &       20 \\
+ \hline
+GRNN         & 67.5 ± 29.9 &  0.28 & [10]           &         10 &      100 \\
+ \hline
+Tanh2HiddenLayer         & 67.4 ± 37.3 &  0.29 & [15, 5]        &         20 &       50 \\
+ \hline
+TanhFFNN         & 67.1 ± 41.3 &  0.29 & [10]           &         10 &       50 \\
+ \hline
+\multirow{3}{*}{ReluFFNN}         & 66.8 ± 17.9 &  0.29 & [15, 5]        &         20 &      200 \\
+         & 65.1 ± 9.5  &  0.31 & [15, 10, 3]    &         28 &       20 \\
+         & 63.4 ± 19.0 &  0.32 & [15, 5]        &         20 &       50 \\
+ \hline
+GRNN         & 63.4 ± 28.9 &  0.32 & [10]           &         10 &      200 \\
+ \hline
+\multirow{2}{*}{ReluFFNN}         & 62.6 ± 13.8 &  0.33 & [15, 5]        &         20 &       20 \\
+         & 61.8 ± 20.7 &  0.33 & [15, 5]        &         20 &      100 \\
+ \hline
+\multirow{5}{*}{TanhFFNN}         & 60.5 ± 40.0 &  0.35 & [15, 10, 3]    &         28 &      100 \\
+         & 59.4 ± 43.3 &  0.36 & [15, 10, 3]    &         28 &      200 \\
+         & 59.3 ± 39.6 &  0.36 & [10]           &         10 &      200 \\
+         & 59.1 ± 40.1 &  0.36 & [10]           &         10 &      100 \\
+         & 56.6 ± 41.6 &  0.38 & [15, 5]        &         20 &       50 \\
+ \hline
+Linear2HiddenLayer         & 55.8 ± 10.0 &  0.39 & [15, 5]        &         20 &       20 \\
+ \hline
+\multirow{5}{*}{LinearFFNN}         & 55.0 ± 0.6  &  0.39 & [15, 10, 3]    &         28 &       50 \\
+         & 54.6 ± 0.3  &  0.4  & [15, 5]        &         20 &      200 \\
+         & 54.6 ± 0.4  &  0.4  & [15, 10, 3]    &         28 &      200 \\
+         & 54.6 ± 0.3  &  0.4  & [15, 5]        &         20 &      100 \\
+         & 54.6 ± 0.4  &  0.4  & [15, 10, 3]    &         28 &      100 \\
+ \hline
+TanhFFNN         & 54.5 ± 35.5 &  0.4  & [15, 5]        &         20 &      200 \\
+ \hline
+\multirow{2}{*}{LinearFFNN}         & 54.4 ± 1.4  &  0.4  & [8, 4]         &         12 &       50 \\
+         & 54.2 ± 0.7  &  0.4  & [8, 4]         &         12 &      200 \\
+ \hline
+\multirow{3}{*}{Linear2HiddenLayer}         & 54.1 ± 0.9  &  0.4  & [15, 5]        &         20 &      200 \\
+         & 54.1 ± 0.9  &  0.4  & [15, 5]        &         20 &      100 \\
+         & 54.1 ± 2.0  &  0.4  & [15, 5]        &         20 &       50 \\
+ \hline
+Relu1HiddenLayer         & 54.0 ± 50.7 &  0.4  & [10]           &         10 &       50 \\
+ \hline
+\multirow{2}{*}{LinearFFNN}         & 53.9 ± 0.5  &  0.4  & [8, 4]         &         12 &      100 \\
+         & 53.5 ± 0.3  &  0.41 & [15, 5]        &         20 &       50 \\
+ \hline
+Linear2HiddenLayer         & 53.4 ± 10.2 &  0.41 & [8, 4]         &         12 &       20 \\
+ \hline
+LinearFFNN         & 52.4 ± 3.2  &  0.42 & [15, 5]        &         20 &       20 \\
+ \hline
+\multirow{3}{*}{Linear2HiddenLayer}         & 52.1 ± 3.7  &  0.42 & [8, 4]         &         12 &      100 \\
+         & 52.1 ± 3.7  &  0.42 & [8, 4]         &         12 &      200 \\
+         & 51.9 ± 3.8  &  0.42 & [8, 4]         &         12 &       50 \\
+ \hline
+TanhFFNN         & 51.8 ± 30.6 &  0.42 & [8, 4]         &         12 &       20 \\
+ \hline
+LinearFFNN         & 50.8 ± 4.8  &  0.43 & [8, 4]         &         12 &       20 \\
+ \hline
+ReluFFNN         & 50.1 ± 28.7 &  0.44 & [8, 4]         &         12 &       20 \\
+ \hline
+\multirow{3}{*}{LinearFFNN}         & 49.4 ± 4.7  &  0.44 & [10]           &         10 &      100 \\
+         & 49.3 ± 4.1  &  0.44 & [15, 10, 3]    &         28 &       20 \\
+         & 49.3 ± 4.6  &  0.44 & [10]           &         10 &      200 \\
+ \hline
+TanhFFNN         & 49.1 ± 42.5 &  0.45 & [15, 5]        &         20 &      100 \\
+ \hline
+\multirow{2}{*}{Linear1HiddenLayer}         & 48.8 ± 7.4  &  0.45 & [10]           &         10 &      100 \\
+         & 48.7 ± 7.3  &  0.45 & [10]           &         10 &      200 \\
+ \hline
+LinearFFNN         & 48.1 ± 5.3  &  0.45 & [10]           &         10 &       50 \\
+ \hline
+Linear1HiddenLayer         & 47.7 ± 9.2  &  0.46 & [10]           &         10 &       50 \\
+ \hline
+Relu1HiddenLayer         & 45.0 ± 48.3 &  0.48 & [10]           &         10 &      100 \\
+ \hline
+Linear1HiddenLayer         & 44.0 ± 14.5 &  0.49 & [10]           &         10 &       20 \\
+ \hline
+Tanh1HiddenLayer         & 43.5 ± 42.3 &  0.49 & [10]           &         10 &       20 \\
+ \hline
+Relu1HiddenLayer         & 41.0 ± 50.5 &  0.52 & [10]           &         10 &      200 \\
+ \hline
+LinearFFNN         & 41.0 ± 8.2  &  0.52 & [10]           &         10 &       20 \\
+ \hline
+\multirow{3}{*}{RBFN}         & 40.8 ± 11.0 &  0.52 & [10]           &         10 &      200 \\
+         & 39.2 ± 10.2 &  0.53 & [10]           &         10 &      100 \\
+         & 26.2 ± 13.1 &  0.65 & [10]           &         10 &       50 \\
+ \hline
+\multirow{3}{*}{Tanh1HiddenLayer}         & 18.8 ± 72.7 &  0.71 & [10]           &         10 &       50 \\
+         & 14.2 ± 79.8 &  0.75 & [10]           &         10 &      100 \\
+         & 14.1 ± 78.3 &  0.75 & [10]           &         10 &      200 \\
+ \hline
+RBFN         & -5.8 ± 4.3  &  0.93 & [10]           &         10 &       20 \\
 \hline
-       \caption{Results of different models}
-\label{models}
-
-\end{longtable}
+\end{tabular}
+        \caption{Results of different models}
+        \label{models}
+    \end{table*}
     
