--- a/NN/view.tex
+++ b/NN/view.tex
@@ -1,11 +1,11 @@
 \documentclass{article}
-\usepackage[a4paper, margin=0.3in]{geometry}  % Set custom margins here
+\usepackage[landscape, margin=0.3in]{geometry}  % Set custom margins here
 \usepackage{multirow}
 \usepackage{makecell}
 \usepackage{booktabs}
 \usepackage{caption}
+\usepackage{pst-platon}
 \usepackage{longtable}
-\usepackage{landscape}
 \usepackage{graphicx}  % Package for including graphics
 \usepackage{float}  % Package to fix the placement of figures
 
