--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -3,37 +3,43 @@
         \centering
         \begin{tabular}{lr}
 \hline
- features                                                         &     R2 \\
+ features                                                            &     R2 \\
 \hline
- pH Sol                                                           &  14.56 \\
- Hydro Time (h)                                                   &  26.4  \\
- Dip Time Sol (s)                                                 &  11.24 \\
- Clay Conc                                                        &  64.24 \\
- Cure Time (min)                                                  &   0.1  \\
- SG Coating, Clay Conc                                            &  64.93 \\
- Temp Alk Sol, Clay Conc                                          &  64.93 \\
- NaOH Wt\%, Clay Conc                                             &  64.93 \\
- Dip Time Alk (min), Clay Conc                                    &  79.07 \\
- pH Sol, Clay Conc                                                &  62.87 \\
- Hydro Time (h), Clay Conc                                        & -15.61 \\
- Dip Time Sol (s), Clay Conc                                      &  80.99 \\
- Cure Time (min), Clay Conc                                       &  74.1  \\
- Cure Temp, Clay Conc                                             &  66.68 \\
- SG Coating, Clay Conc, Dip Time Sol (s)                          &  81.03 \\
- Temp Alk Sol, Clay Conc, Dip Time Sol (s)                        &  81.03 \\
- NaOH Wt\%, Clay Conc, Dip Time Sol (s)                           &  81.03 \\
- Dip Time Alk (min), Clay Conc, Dip Time Sol (s)                  &  93.94 \\
- pH Sol, Clay Conc, Dip Time Sol (s)                              &  83.22 \\
- Hydro Time (h), Clay Conc, Dip Time Sol (s)                      &  56.92 \\
- Cure Time (min), Clay Conc, Dip Time Sol (s)                     &  60.09 \\
- Cure Temp, Clay Conc, Dip Time Sol (s)                           &  60.67 \\
- SG Coating, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)      &  85.55 \\
- Temp Alk Sol, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)    &  85.55 \\
- NaOH Wt\%, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)       &  85.55 \\
- pH Sol, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)          &  77.04 \\
- Hydro Time (h), Clay Conc, Dip Time Sol (s), Dip Time Alk (min)  &  75.85 \\
- Cure Time (min), Clay Conc, Dip Time Sol (s), Dip Time Alk (min) &  71.81 \\
- Cure Temp, Clay Conc, Dip Time Sol (s), Dip Time Alk (min)       &  63.33 \\
+ pH Sol                                                              &  14.96 \\
+ Hydro Time (h)                                                      &  33.65 \\
+ Dip Time Sol (s)                                                    &  11.2  \\
+ Clay Conc                                                           &  68.7  \\
+ Cure Time (min)                                                     & -15.76 \\
+ SG Coating, Clay Conc                                               &  63.12 \\
+ Temp Alk Sol, Clay Conc                                             &  63.12 \\
+ NaOH Wt\%, Clay Conc                                                &  63.12 \\
+ Dip Time Alk (min), Clay Conc                                       &  47.64 \\
+ pH Sol, Clay Conc                                                   &  77.65 \\
+ Hydro Time (h), Clay Conc                                           & -24.51 \\
+ Dip Time Sol (s), Clay Conc                                         &  68.92 \\
+ Cure Time (min), Clay Conc                                          &  67.83 \\
+ Cure Temp, Clay Conc                                                &  62.76 \\
+ SG Coating, Clay Conc, pH Sol                                       &  82    \\
+ Temp Alk Sol, Clay Conc, pH Sol                                     &  82    \\
+ NaOH Wt\%, Clay Conc, pH Sol                                        &  82    \\
+ Dip Time Alk (min), Clay Conc, pH Sol                               &  72.38 \\
+ Hydro Time (h), Clay Conc, pH Sol                                   &  32.74 \\
+ Dip Time Sol (s), Clay Conc, pH Sol                                 &  75.65 \\
+ Cure Time (min), Clay Conc, pH Sol                                  &  70.52 \\
+ Cure Temp, Clay Conc, pH Sol                                        &  71.84 \\
+ Temp Alk Sol, Clay Conc, pH Sol, SG Coating                         &  87.46 \\
+ NaOH Wt\%, Clay Conc, pH Sol, SG Coating                            &  87.46 \\
+ Dip Time Alk (min), Clay Conc, pH Sol, SG Coating                   &  80.65 \\
+ Hydro Time (h), Clay Conc, pH Sol, SG Coating                       &  43.08 \\
+ Dip Time Sol (s), Clay Conc, pH Sol, SG Coating                     &  90.78 \\
+ Cure Time (min), Clay Conc, pH Sol, SG Coating                      &  62.85 \\
+ Cure Temp, Clay Conc, pH Sol, SG Coating                            &  58.38 \\
+ Temp Alk Sol, Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)       &  81.02 \\
+ NaOH Wt\%, Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)          &  81.02 \\
+ Dip Time Alk (min), Clay Conc, pH Sol, SG Coating, Dip Time Sol (s) &  89.34 \\
+ Hydro Time (h), Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)     &  52.86 \\
+ Cure Time (min), Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)    &  73.46 \\
+ Cure Temp, Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)          &  67.5  \\
 \hline
 \end{tabular}
         \caption{Results of Forward Feature Selection for different features}
