--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -5,16 +5,16 @@
 \hline
  Feature            &   Sensitivity &    Variance \\
 \hline
- Clay Conc          &      53.5718  & 0           \\
- Cure Temp          &      -1.89957 & 2.01948e-28 \\
- Cure Time (min)    &      -6.29477 & 2.01948e-28 \\
- Dip Time Sol (s)   &      -9.4163  & 2.01948e-28 \\
- SG Coating         &     -12.1679  & 2.01948e-28 \\
- Temp Alk Sol       &     -12.1679  & 2.01948e-28 \\
- NaOH Wt\%          &     -12.1679  & 2.01948e-28 \\
- pH Sol             &     -13.4318  & 0           \\
- Dip Time Alk (min) &     -14.7658  & 2.01948e-28 \\
- Hydro Time (h)     &     -14.9093  & 0           \\
+ pH Sol             &     90.3353   & 0           \\
+ Cure Temp          &     74.2398   & 0           \\
+ Clay Conc          &     61.0197   & 5.04871e-29 \\
+ Cure Time (min)    &     57.8055   & 1.26218e-29 \\
+ Dip Time Alk (min) &     17.788    & 2.01948e-28 \\
+ Hydro Time (h)     &     12.1667   & 0           \\
+ Dip Time Sol (s)   &     -0.423155 & 2.01948e-28 \\
+ SG Coating         &     -4.62461  & 0           \\
+ Temp Alk Sol       &     -4.62461  & 0           \\
+ NaOH Wt\%          &     -4.62461  & 0           \\
 \hline
 \end{tabular}
         \caption{Results of Jackknife Sensitivity Analysis}
