--- a/NN/plots_latex.tex
+++ b/NN/plots_latex.tex
@@ -1,6 +1,54 @@
 
 \begin{figure}[H]
     \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/ReluTanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{ReluTanhFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhReluFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{TanhReluFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
     \includegraphics[width=0.8\textwidth]{plots/TanhFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
     \caption{TanhFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
 \end{figure}
@@ -39,6 +87,30 @@
     \centering
     \includegraphics[width=0.8\textwidth]{plots/Relu1HiddenLayer-R2-vs-Num-of-Epochs-HiddenSize-10.png}
     \caption{Relu1HiddenLayer - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-12.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 12)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-28.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 28)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-10.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 10)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{plots/TanhLinFFNN-R2-vs-Num-of-Epochs-HiddenSize-20.png}
+    \caption{TanhLinFFNN - R2 vs. Number of Epochs (Hidden Size: 20)}
 \end{figure}
 
 \begin{figure}[H]
