--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.23-TanhFFNN-Impedance-module.png}
-    \caption{Prediction of Impedance module with TanhFFNN - R-Squared: 0.99}
+    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.68-ReluTanhFFNN-Impedance-module.png}
+    \caption{Prediction of Impedance module with ReluTanhFFNN epochs:20 - R-Squared: 1.00}
 \end{figure}
