--- a/NN/test.tex
+++ b/NN/test.tex
@@ -1,7 +1,4 @@
-
-    \begin{table*}[h]
-        \centering
-        \begin{tabular}{lrrrllrr}
+\begin{longtable}{lrrrllrr}
 \hline
  model   &    R2 &   MSE &   R2 std & R2 List      & hidden sizes   &   total hs &   epochs \\
 \hline
@@ -18,8 +15,4 @@
 \multirow{2}{*}{model4}         & 85.75 &  1    &      1.7 & [85.0, 86.5] & [32, 16]       &         48 &      200 \\
          & 85.75 &  1    &      1.7 & [85.0, 86.5] & [32, 16]       &         48 &      200 \\
 \hline
-\end{tabular}
-        \caption{Example Table}
-        \label{table:example}
-    \end{table*}
-    
+\end{longtable}
