--- a/NN/view.tex
+++ b/NN/view.tex
@@ -22,9 +22,9 @@
 \subsection{Jackknife Sensitivity Analysis}
 \input{tables/jackknife}
 
-\subsection{Predictions Plots}
-\input{plots_preds_latex}
-\subsection{Performance Plots}
-\input{plots_latex}  % Include the generated LaTeX code for plots
+%\subsection{Predictions Plots}
+%\input{plots_preds_latex}
+%\subsection{Performance Plots}
+%\input{plots_latex}  % Include the generated LaTeX code for plots
 
 \end{document}
