--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -5,17 +5,34 @@
 \hline
  features                                                                                                                                 &    R2 \\
 \hline
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp & 89.74 \\
- Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp             & 66.46 \\
- SG Coating, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp               & 66.46 \\
- SG Coating, Temp Alk Sol, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp            & 66.46 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp                     & 89.54 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp         &  9.16 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp                 & 87.32 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                   & 63.66 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Cure Time (min), Cure Temp            & 44.54 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Temp                  & 56.51 \\
- SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min)            & 66.27 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp & 95.29 \\
+ Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp             & 76.07 \\
+ SG Coating, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp               & 76.07 \\
+ SG Coating, Temp Alk Sol, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp            & 76.07 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp                     & 87.47 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp         & 92.79 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Dip Time Sol (s), Clay Conc, Cure Time (min), Cure Temp                 & 92.1  \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                   & 97.4  \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Cure Time (min), Cure Temp            & 55.97 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Temp                  & 53.91 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Dip Time Sol (s), Clay Conc, Cure Time (min)            & 74.51 \\
+ Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                               & 92.9  \\
+ SG Coating, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                                 & 92.9  \\
+ SG Coating, Temp Alk Sol, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                              & 92.9  \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, pH Sol, Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                                       & 95.57 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), Hydro Time (h), Clay Conc, Cure Time (min), Cure Temp                           & 85.71 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Clay Conc, Cure Time (min), Cure Temp                                   & 97.5  \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Cure Time (min), Cure Temp                              & 43.32 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Temp                                    & 60.99 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Hydro Time (h), Clay Conc, Cure Time (min)                              & 81    \\
+ Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Clay Conc, Cure Time (min), Cure Temp                                               & 90.77 \\
+ SG Coating, NaOH Wt\%, Dip Time Alk (min), pH Sol, Clay Conc, Cure Time (min), Cure Temp                                                 & 90.77 \\
+ SG Coating, Temp Alk Sol, Dip Time Alk (min), pH Sol, Clay Conc, Cure Time (min), Cure Temp                                              & 90.77 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, pH Sol, Clay Conc, Cure Time (min), Cure Temp                                                       & 94.85 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), Clay Conc, Cure Time (min), Cure Temp                                           & 91.66 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Cure Time (min), Cure Temp                                              &  9.19 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Clay Conc, Cure Temp                                                    & 57.05 \\
+ SG Coating, Temp Alk Sol, NaOH Wt\%, Dip Time Alk (min), pH Sol, Clay Conc, Cure Time (min)                                              & 73.86 \\
 \hline
 \end{tabular}
         \caption{Results of Backward Feature Elimination}
