--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,32 +1,69 @@
-
-    \begin{table*}[h]
-        \centering
-        \begin{tabular}{llrlrr}
+\begin{longtable}{llrlrr}
 \hline
  model   & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
  \hline
+\multirow{8}{*}{ReluTanhFFNN}         & 95.3 ± 2.3  &  0.04 & [15, 10, 3]    &         28 &       20 \\
+         & 94.6 ± 5.3  &  0.05 & [15, 10, 3]    &         28 &       50 \\
+         & 94.4 ± 5.6  &  0.05 & [15, 10, 3]    &         28 &      200 \\
+         & 94.2 ± 5.5  &  0.05 & [15, 10, 3]    &         28 &      100 \\
+         & 93.0 ± 4.4  &  0.06 & [8, 4]         &         12 &       50 \\
+         & 91.4 ± 7.6  &  0.08 & [15, 5]        &         20 &       50 \\
+         & 91.3 ± 5.5  &  0.08 & [8, 4]         &         12 &      200 \\
+         & 90.9 ± 5.6  &  0.08 & [8, 4]         &         12 &      100 \\
+ \hline
+\multirow{3}{*}{TanhReluFFNN}         & 90.4 ± 9.1  &  0.08 & [8, 4]         &         12 &      100 \\
+         & 90.3 ± 9.4  &  0.08 & [8, 4]         &         12 &      200 \\
+         & 90.3 ± 8.5  &  0.09 & [8, 4]         &         12 &       50 \\
+ \hline
+ReluTanhFFNN         & 90.0 ± 9.1  &  0.09 & [15, 5]        &         20 &       20 \\
+ \hline
 TanhFFNN         & 89.7 ± 6.6  &  0.09 & [8, 4]         &         12 &       50 \\
+ \hline
+\multirow{2}{*}{ReluTanhFFNN}         & 89.1 ± 6.5  &  0.1  & [15, 5]        &         20 &      100 \\
+         & 88.9 ± 5.8  &  0.1  & [15, 5]        &         20 &      200 \\
  \hline
 \multirow{2}{*}{Relu2HiddenLayer}         & 87.0 ± 8.3  &  0.11 & [8, 4]         &         12 &       20 \\
          & 86.9 ± 8.4  &  0.11 & [8, 4]         &         12 &       50 \\
  \hline
+TanhReluFFNN         & 85.7 ± 9.8  &  0.13 & [15, 5]        &         20 &       20 \\
+ \hline
 Relu1HiddenLayer         & 84.8 ± 7.3  &  0.13 & [10]           &         10 &       20 \\
  \hline
-ReluFFNN         & 83.1 ± 6.7  &  0.15 & [10]           &         10 &      100 \\
+TanhReluFFNN         & 84.3 ± 12.4 &  0.14 & [15, 5]        &         20 &       50 \\
+ \hline
+TanhLinFFNN         & 84.1 ± 11.7 &  0.14 & [8, 4]         &         12 &       50 \\
+ \hline
+\multirow{2}{*}{TanhReluFFNN}         & 84.0 ± 12.6 &  0.14 & [15, 5]        &         20 &      100 \\
+         & 83.8 ± 13.1 &  0.14 & [15, 5]        &         20 &      200 \\
+ \hline
+ReluTanhFFNN         & 83.1 ± 6.7  &  0.15 & [10]           &         10 &      100 \\
+ \hline
+\multirow{2}{*}{ReluFFNN}         & 83.1 ± 6.7  &  0.15 & [10]           &         10 &      100 \\
+         & 82.9 ± 5.7  &  0.15 & [10]           &         10 &      200 \\
+ \hline
+ReluTanhFFNN         & 82.9 ± 5.7  &  0.15 & [10]           &         10 &      200 \\
  \hline
 Relu2HiddenLayer         & 82.9 ± 8.7  &  0.15 & [8, 4]         &         12 &      200 \\
  \hline
-ReluFFNN         & 82.9 ± 5.7  &  0.15 & [10]           &         10 &      200 \\
+ReluTanhFFNN         & 82.7 ± 9.8  &  0.15 & [8, 4]         &         12 &       20 \\
+ \hline
+TanhLinFFNN         & 82.6 ± 9.1  &  0.15 & [8, 4]         &         12 &      100 \\
  \hline
 Relu2HiddenLayer         & 82.5 ± 10.2 &  0.15 & [8, 4]         &         12 &      100 \\
  \hline
+TanhLinFFNN         & 81.7 ± 10.6 &  0.16 & [8, 4]         &         12 &      200 \\
+ \hline
 ReluFFNN         & 81.3 ± 7.7  &  0.16 & [10]           &         10 &       50 \\
+ \hline
+ReluTanhFFNN         & 81.3 ± 7.7  &  0.16 & [10]           &         10 &       50 \\
  \hline
 TanhFFNN         & 80.5 ± 18.3 &  0.17 & [8, 4]         &         12 &      100 \\
  \hline
-\multirow{3}{*}{ReluFFNN}         & 79.6 ± 14.5 &  0.18 & [8, 4]         &         12 &      200 \\
-         & 79.6 ± 9.2  &  0.18 & [10]           &         10 &       20 \\
+ReluTanhFFNN         & 79.6 ± 9.2  &  0.18 & [10]           &         10 &       20 \\
+ \hline
+\multirow{3}{*}{ReluFFNN}         & 79.6 ± 9.2  &  0.18 & [10]           &         10 &       20 \\
+         & 79.6 ± 14.5 &  0.18 & [8, 4]         &         12 &      200 \\
          & 79.3 ± 14.6 &  0.18 & [8, 4]         &         12 &      100 \\
  \hline
 Relu2HiddenLayer         & 78.1 ± 20.0 &  0.19 & [15, 5]        &         20 &       20 \\
@@ -37,8 +74,13 @@ TanhFFNN         & 77.8 ± 17.3 &  0.19 & [15, 10, 3]    &         28 &       50
  \hline
 GRNN         & 76.9 ± 12.0 &  0.2  & [10]           &         10 &       20 \\
  \hline
-\multirow{2}{*}{Relu2HiddenLayer}         & 76.7 ± 16.3 &  0.2  & [15, 5]        &         20 &       50 \\
-         & 74.6 ± 20.2 &  0.22 & [15, 5]        &         20 &      100 \\
+Relu2HiddenLayer         & 76.7 ± 16.3 &  0.2  & [15, 5]        &         20 &       50 \\
+ \hline
+TanhReluFFNN         & 76.7 ± 17.6 &  0.2  & [8, 4]         &         12 &       20 \\
+ \hline
+TanhLinFFNN         & 74.6 ± 14.5 &  0.22 & [8, 4]         &         12 &       20 \\
+ \hline
+Relu2HiddenLayer         & 74.6 ± 20.2 &  0.22 & [15, 5]        &         20 &      100 \\
  \hline
 TanhFFNN         & 74.3 ± 23.1 &  0.22 & [15, 10, 3]    &         28 &       20 \\
  \hline
@@ -60,41 +102,82 @@ ReluFFNN         & 70.8 ± 14.7 &  0.26 & [15, 10, 3]    &         28 &      200
  \hline
 GRNN         & 70.7 ± 16.4 &  0.26 & [10]           &         10 &       50 \\
  \hline
-\multirow{2}{*}{TanhFFNN}         & 70.1 ± 24.1 &  0.26 & [15, 5]        &         20 &       20 \\
-         & 68.7 ± 27.3 &  0.27 & [10]           &         10 &       20 \\
+TanhFFNN         & 70.1 ± 24.1 &  0.26 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{3}{*}{Tanh2HiddenLayer}         & 67.8 ± 32.1 &  0.28 & [15, 5]        &         20 &      200 \\
+TanhLinFFNN         & 69.6 ± 20.4 &  0.27 & [15, 10, 3]    &         28 &      200 \\
+ \hline
+TanhReluFFNN         & 68.7 ± 27.3 &  0.27 & [10]           &         10 &       20 \\
+ \hline
+TanhFFNN         & 68.7 ± 27.3 &  0.27 & [10]           &         10 &       20 \\
+ \hline
+TanhLinFFNN         & 68.7 ± 27.3 &  0.27 & [10]           &         10 &       20 \\
+ \hline
+\multirow{2}{*}{Tanh2HiddenLayer}         & 67.8 ± 32.1 &  0.28 & [15, 5]        &         20 &      200 \\
          & 67.6 ± 22.8 &  0.28 & [8, 4]         &         12 &       20 \\
-         & 67.5 ± 24.1 &  0.28 & [15, 5]        &         20 &       20 \\
+ \hline
+TanhLinFFNN         & 67.5 ± 25.4 &  0.28 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+Tanh2HiddenLayer         & 67.5 ± 24.1 &  0.28 & [15, 5]        &         20 &       20 \\
  \hline
 GRNN         & 67.5 ± 29.9 &  0.28 & [10]           &         10 &      100 \\
  \hline
 Tanh2HiddenLayer         & 67.4 ± 37.3 &  0.29 & [15, 5]        &         20 &       50 \\
  \hline
+\multirow{2}{*}{TanhReluFFNN}         & 67.1 ± 41.3 &  0.29 & [10]           &         10 &       50 \\
+         & 67.1 ± 24.1 &  0.29 & [15, 10, 3]    &         28 &      200 \\
+ \hline
+TanhLinFFNN         & 67.1 ± 41.3 &  0.29 & [10]           &         10 &       50 \\
+ \hline
 TanhFFNN         & 67.1 ± 41.3 &  0.29 & [10]           &         10 &       50 \\
  \hline
-\multirow{3}{*}{ReluFFNN}         & 66.8 ± 17.9 &  0.29 & [15, 5]        &         20 &      200 \\
+TanhLinFFNN         & 67.0 ± 27.6 &  0.29 & [15, 10, 3]    &         28 &       50 \\
+ \hline
+\multirow{2}{*}{ReluFFNN}         & 66.8 ± 17.9 &  0.29 & [15, 5]        &         20 &      200 \\
          & 65.1 ± 9.5  &  0.31 & [15, 10, 3]    &         28 &       20 \\
-         & 63.4 ± 19.0 &  0.32 & [15, 5]        &         20 &       50 \\
+ \hline
+TanhReluFFNN         & 63.8 ± 20.2 &  0.32 & [15, 10, 3]    &         28 &      100 \\
+ \hline
+ReluFFNN         & 63.4 ± 19.0 &  0.32 & [15, 5]        &         20 &       50 \\
  \hline
 GRNN         & 63.4 ± 28.9 &  0.32 & [10]           &         10 &      200 \\
  \hline
-\multirow{2}{*}{ReluFFNN}         & 62.6 ± 13.8 &  0.33 & [15, 5]        &         20 &       20 \\
-         & 61.8 ± 20.7 &  0.33 & [15, 5]        &         20 &      100 \\
+TanhLinFFNN         & 63.3 ± 21.0 &  0.32 & [15, 10, 3]    &         28 &       20 \\
  \hline
-\multirow{5}{*}{TanhFFNN}         & 60.5 ± 40.0 &  0.35 & [15, 10, 3]    &         28 &      100 \\
+ReluFFNN         & 62.6 ± 13.8 &  0.33 & [15, 5]        &         20 &       20 \\
+ \hline
+TanhLinFFNN         & 62.1 ± 12.8 &  0.33 & [15, 5]        &         20 &       20 \\
+ \hline
+ReluFFNN         & 61.8 ± 20.7 &  0.33 & [15, 5]        &         20 &      100 \\
+ \hline
+\multirow{2}{*}{TanhFFNN}         & 60.5 ± 40.0 &  0.35 & [15, 10, 3]    &         28 &      100 \\
          & 59.4 ± 43.3 &  0.36 & [15, 10, 3]    &         28 &      200 \\
-         & 59.3 ± 39.6 &  0.36 & [10]           &         10 &      200 \\
-         & 59.1 ± 40.1 &  0.36 & [10]           &         10 &      100 \\
-         & 56.6 ± 41.6 &  0.38 & [15, 5]        &         20 &       50 \\
+ \hline
+TanhReluFFNN         & 59.3 ± 39.6 &  0.36 & [10]           &         10 &      200 \\
+ \hline
+TanhLinFFNN         & 59.3 ± 39.6 &  0.36 & [10]           &         10 &      200 \\
+ \hline
+TanhFFNN         & 59.3 ± 39.6 &  0.36 & [10]           &         10 &      200 \\
+ \hline
+TanhReluFFNN         & 59.1 ± 40.1 &  0.36 & [10]           &         10 &      100 \\
+ \hline
+TanhFFNN         & 59.1 ± 40.1 &  0.36 & [10]           &         10 &      100 \\
+ \hline
+\multirow{4}{*}{TanhLinFFNN}         & 59.1 ± 40.1 &  0.36 & [10]           &         10 &      100 \\
+         & 58.9 ± 21.2 &  0.36 & [15, 5]        &         20 &      200 \\
+         & 58.8 ± 21.3 &  0.36 & [15, 5]        &         20 &       50 \\
+         & 58.7 ± 21.3 &  0.36 & [15, 5]        &         20 &      100 \\
+ \hline
+TanhReluFFNN         & 57.4 ± 6.9  &  0.37 & [15, 10, 3]    &         28 &       20 \\
+ \hline
+TanhFFNN         & 56.6 ± 41.6 &  0.38 & [15, 5]        &         20 &       50 \\
  \hline
 Linear2HiddenLayer         & 55.8 ± 10.0 &  0.39 & [15, 5]        &         20 &       20 \\
  \hline
 \multirow{5}{*}{LinearFFNN}         & 55.0 ± 0.6  &  0.39 & [15, 10, 3]    &         28 &       50 \\
+         & 54.6 ± 0.4  &  0.4  & [15, 10, 3]    &         28 &      100 \\
          & 54.6 ± 0.3  &  0.4  & [15, 5]        &         20 &      200 \\
          & 54.6 ± 0.4  &  0.4  & [15, 10, 3]    &         28 &      200 \\
          & 54.6 ± 0.3  &  0.4  & [15, 5]        &         20 &      100 \\
-         & 54.6 ± 0.4  &  0.4  & [15, 10, 3]    &         28 &      100 \\
  \hline
 TanhFFNN         & 54.5 ± 35.5 &  0.4  & [15, 5]        &         20 &      200 \\
  \hline
@@ -114,19 +197,21 @@ Linear2HiddenLayer         & 53.4 ± 10.2 &  0.41 & [8, 4]         &         12 
  \hline
 LinearFFNN         & 52.4 ± 3.2  &  0.42 & [15, 5]        &         20 &       20 \\
  \hline
-\multirow{3}{*}{Linear2HiddenLayer}         & 52.1 ± 3.7  &  0.42 & [8, 4]         &         12 &      100 \\
-         & 52.1 ± 3.7  &  0.42 & [8, 4]         &         12 &      200 \\
+\multirow{3}{*}{Linear2HiddenLayer}         & 52.1 ± 3.7  &  0.42 & [8, 4]         &         12 &      200 \\
+         & 52.1 ± 3.7  &  0.42 & [8, 4]         &         12 &      100 \\
          & 51.9 ± 3.8  &  0.42 & [8, 4]         &         12 &       50 \\
  \hline
 TanhFFNN         & 51.8 ± 30.6 &  0.42 & [8, 4]         &         12 &       20 \\
+ \hline
+TanhReluFFNN         & 51.2 ± 21.9 &  0.43 & [15, 10, 3]    &         28 &       50 \\
  \hline
 LinearFFNN         & 50.8 ± 4.8  &  0.43 & [8, 4]         &         12 &       20 \\
  \hline
 ReluFFNN         & 50.1 ± 28.7 &  0.44 & [8, 4]         &         12 &       20 \\
  \hline
 \multirow{3}{*}{LinearFFNN}         & 49.4 ± 4.7  &  0.44 & [10]           &         10 &      100 \\
-         & 49.3 ± 4.1  &  0.44 & [15, 10, 3]    &         28 &       20 \\
          & 49.3 ± 4.6  &  0.44 & [10]           &         10 &      200 \\
+         & 49.3 ± 4.1  &  0.44 & [15, 10, 3]    &         28 &       20 \\
  \hline
 TanhFFNN         & 49.1 ± 42.5 &  0.45 & [15, 5]        &         20 &      100 \\
  \hline
@@ -143,9 +228,9 @@ Linear1HiddenLayer         & 44.0 ± 14.5 &  0.49 & [10]           &         10 
  \hline
 Tanh1HiddenLayer         & 43.5 ± 42.3 &  0.49 & [10]           &         10 &       20 \\
  \hline
-Relu1HiddenLayer         & 41.0 ± 50.5 &  0.52 & [10]           &         10 &      200 \\
- \hline
 LinearFFNN         & 41.0 ± 8.2  &  0.52 & [10]           &         10 &       20 \\
+ \hline
+Relu1HiddenLayer         & 41.0 ± 50.5 &  0.52 & [10]           &         10 &      200 \\
  \hline
 \multirow{3}{*}{RBFN}         & 40.8 ± 11.0 &  0.52 & [10]           &         10 &      200 \\
          & 39.2 ± 10.2 &  0.53 & [10]           &         10 &      100 \\
@@ -157,8 +242,4 @@ LinearFFNN         & 41.0 ± 8.2  &  0.52 & [10]           &         10 &       
  \hline
 RBFN         & -5.8 ± 4.3  &  0.93 & [10]           &         10 &       20 \\
 \hline
-\end{tabular}
-        \caption{Results of different models}
-        \label{models}
-    \end{table*}
-    
+\end{longtable}
