--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.68-ReluTanhFFNN-Impedance-module.png}
-    \caption{Prediction of Impedance module with ReluTanhFFNN epochs:20 - R-Squared: 1.00}
+    \includegraphics[width=0.8\textwidth]{plots_preds/R2-98.65-TanhReluFFNN-conc.png}
+    \caption{Prediction of conc with TanhReluFFNN epochs:50 - R-Squared: 0.99}
 \end{figure}
