--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -1,48 +1,16 @@
-
-    \begin{table*}[h]
-        \centering
-        \begin{tabular}{lr}
+\begin{longtable}{lr}
 \hline
- features                                                            &     R2 \\
+ features                        &    R2 \\
 \hline
- pH Sol                                                              &  14.96 \\
- Hydro Time (h)                                                      &  33.65 \\
- Dip Time Sol (s)                                                    &  11.2  \\
- Clay Conc                                                           &  68.7  \\
- Cure Time (min)                                                     & -15.76 \\
- SG Coating, Clay Conc                                               &  63.12 \\
- Temp Alk Sol, Clay Conc                                             &  63.12 \\
- NaOH Wt\%, Clay Conc                                                &  63.12 \\
- Dip Time Alk (min), Clay Conc                                       &  47.64 \\
- pH Sol, Clay Conc                                                   &  77.65 \\
- Hydro Time (h), Clay Conc                                           & -24.51 \\
- Dip Time Sol (s), Clay Conc                                         &  68.92 \\
- Cure Time (min), Clay Conc                                          &  67.83 \\
- Cure Temp, Clay Conc                                                &  62.76 \\
- SG Coating, Clay Conc, pH Sol                                       &  82    \\
- Temp Alk Sol, Clay Conc, pH Sol                                     &  82    \\
- NaOH Wt\%, Clay Conc, pH Sol                                        &  82    \\
- Dip Time Alk (min), Clay Conc, pH Sol                               &  72.38 \\
- Hydro Time (h), Clay Conc, pH Sol                                   &  32.74 \\
- Dip Time Sol (s), Clay Conc, pH Sol                                 &  75.65 \\
- Cure Time (min), Clay Conc, pH Sol                                  &  70.52 \\
- Cure Temp, Clay Conc, pH Sol                                        &  71.84 \\
- Temp Alk Sol, Clay Conc, pH Sol, SG Coating                         &  87.46 \\
- NaOH Wt\%, Clay Conc, pH Sol, SG Coating                            &  87.46 \\
- Dip Time Alk (min), Clay Conc, pH Sol, SG Coating                   &  80.65 \\
- Hydro Time (h), Clay Conc, pH Sol, SG Coating                       &  43.08 \\
- Dip Time Sol (s), Clay Conc, pH Sol, SG Coating                     &  90.78 \\
- Cure Time (min), Clay Conc, pH Sol, SG Coating                      &  62.85 \\
- Cure Temp, Clay Conc, pH Sol, SG Coating                            &  58.38 \\
- Temp Alk Sol, Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)       &  81.02 \\
- NaOH Wt\%, Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)          &  81.02 \\
- Dip Time Alk (min), Clay Conc, pH Sol, SG Coating, Dip Time Sol (s) &  89.34 \\
- Hydro Time (h), Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)     &  52.86 \\
- Cure Time (min), Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)    &  73.46 \\
- Cure Temp, Clay Conc, pH Sol, SG Coating, Dip Time Sol (s)          &  67.5  \\
+ time                            & 93.84 \\
+ flowrate                        & -0.79 \\
+ temp                            &  0.69 \\
+ init conc                       &  1.47 \\
+ flowrate, time                  & 95.32 \\
+ temp, time                      & 93.29 \\
+ init conc, time                 & 94.95 \\
+ temp, time, flowrate            & 95.21 \\
+ init conc, time, flowrate       & 97.84 \\
+ temp, time, flowrate, init conc & 97.39 \\
 \hline
-\end{tabular}
-        \caption{Results of Forward Feature Selection for different features}
-        \label{forward}
-    \end{table*}
-    
+\end{longtable}
