--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -1,23 +1,10 @@
-
-    \begin{table*}[h]
-        \centering
-        \begin{tabular}{lrr}
+\begin{longtable}{lrr}
 \hline
- Feature            &   Sensitivity &    Variance \\
+ Feature   &   Sensitivity &    Variance \\
 \hline
- pH Sol             &     90.3353   & 0           \\
- Cure Temp          &     74.2398   & 0           \\
- Clay Conc          &     61.0197   & 5.04871e-29 \\
- Cure Time (min)    &     57.8055   & 1.26218e-29 \\
- Dip Time Alk (min) &     17.788    & 2.01948e-28 \\
- Hydro Time (h)     &     12.1667   & 0           \\
- Dip Time Sol (s)   &     -0.423155 & 2.01948e-28 \\
- SG Coating         &     -4.62461  & 0           \\
- Temp Alk Sol       &     -4.62461  & 0           \\
- NaOH Wt\%          &     -4.62461  & 0           \\
+ time      &     97.1785   & 0           \\
+ flowrate  &      6.05278  & 2.01948e-28 \\
+ init conc &      1.83885  & 0           \\
+ temp      &      0.425639 & 2.01948e-28 \\
 \hline
-\end{tabular}
-        \caption{Results of Jackknife Sensitivity Analysis}
-        \label{jackknife}
-    \end{table*}
-    
+\end{longtable}
