--- a/NN/tables/weight-analysis.tex
+++ b/NN/tables/weight-analysis.tex
@@ -1,21 +1,10 @@
-
-    \begin{table*}[h]
-        \centering
-        \begin{tabular}{lr}
+\begin{longtable}{lr}
 \hline
- Feature            &   Weight Importance \\
+ Feature   &   Weight Importance \\
 \hline
- Cure Temp          &            0.713951 \\
- Cure Time (min)    &            0.551723 \\
- Dip Time Alk (min) &            0.490538 \\
- pH Sol             &            0.486925 \\
- SG Coating         &            0.471994 \\
- Clay Conc          &            0.466521 \\
- Temp Alk Sol       &            0.352937 \\
- NaOH Wt\%          &            0.321755 \\
+ time      &            0.792844 \\
+ init conc &            0.746556 \\
+ flowrate  &            0.692    \\
+ temp      &            0.396428 \\
 \hline
-\end{tabular}
-        \caption{Results of Weight Analysis}
-        \label{weight_analysis}
-    \end{table*}
-    
+\end{longtable}
