--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.30-TanhReluFFNN-Impedance-module.png}
-    \caption{Prediction of Impedance module with TanhReluFFNN epochs:200 - R-Squared: 0.99}
+    \includegraphics[width=0.8\textwidth]{plots_preds/lstm-plots/R2-0.9655.png}
+    \caption{R2-0.9655 - R-Squared: 0.97}
 \end{figure}
